# spotify_history

./: README.md  gitignore  pyproject.toml
data/: albums.csv  artists.csv  audio_features.csv  liked_songs_raw.csv
figures/: audio_features_radar.html  audio_features_ridge.html  df.html  explicit_bar.html  popularity_dist.html  popularity_ridge.html  saved_tracks_by_dayofweek_bar.html  saved_tracks_by_main_genre_2020_bar.html  saved_tracks_by_main_genre_all_years_subplots_radar.html  saved_tracks_by_main_genre_bar.html  saved_tracks_by_main_genre_radar.html  saved_tracks_by_month_bar.html  saved_tracks_by_timeofday_dist.html  saved_tracks_by_year_bar.html  saved_tracks_cumulative_line.html  tempo_dist.html  tempo_ridge.html  unique_artists_line.html
figures/.ipynb_checkpoints/: df-checkpoint.html
notebooks/: get_liked_songs.ipynb
src/analysis/: analysis.py
src/data_download/: api_utils.py  cleaning.py
